--- a/scss/main_section.scss
+++ b/scss/main_section.scss
@@ -100,7 +100,7 @@ div.running_osung_wrapper {
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   .me {
-  background-image: url('/images/running.png');
+  background-image: url('/images/running.webp');
   background-repeat: no-repeat;
   display: block;
   width: 300px;
