--- a/scss/skills_stacks_section.scss
+++ b/scss/skills_stacks_section.scss
@@ -179,7 +179,7 @@ div.ss_bg {
         stroke-dasharray: 950px;
         stroke-dashoffset: 950px;
         &.selected {
-          animation: circle_svg_ani 2s ease-out forwards; 
+          animation: circle_svg_ani 2.5s ease-out forwards; 
         }
       }
       &.bg_ss_circle_down {
@@ -190,7 +190,7 @@ div.ss_bg {
         stroke-dasharray: 950px;
         stroke-dashoffset: 950px;
         &.selected {
-          animation: circle_svg_down_ani 2s ease-out forwards; 
+          animation: circle_svg_down_ani 2s ease alternate-reverse forwards; 
         }
       }
       @keyframes circle_svg_ani {
@@ -203,10 +203,10 @@ div.ss_bg {
       }
       @keyframes circle_svg_down_ani {
         0% {
-            stroke-dashoffset: -950;
+            stroke-dashoffset: 0;
         }
         100% {
-            stroke-dashoffset: 0;
+            stroke-dashoffset: -950;
         }
       }
     }
