--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -55,9 +55,9 @@ div.project_view_wrapper {
   .project_view {
     width: 100%;
     height: 19rem;
-    :hover .project_main_pic > img {
-      filter: blur(1px);
-    }
+    // :hover .project_main_pic > img {
+    //   filter: blur(1px);
+    // }
     & > div {
       width: 100%;
       height: 19rem;
@@ -80,6 +80,9 @@ div.project_main_pic {
     max-width: 400px;
     height: auto;
   }
+  &:hover p.click_me {
+    opacity: 0;
+  }
   &:hover > img {
     filter: blur(1px);
   }
@@ -98,6 +101,10 @@ div.project_main_pic {
     display: block;
     transition: all 0.4s ease-out;
   }
+  .mouseover {
+    
+
+  }
   .mouseover > img {
     border-radius: 20px;
     width: 100%;
@@ -105,8 +112,19 @@ div.project_main_pic {
     position: absolute;
     left: 0;
     top: 0;
-    // transition: all 0.3s ease-out;
   }
+  p.click_me {
+    opacity: 1;
+    position: absolute;
+    right: 1rem;
+    bottom: 0.5rem;
+
+    color: white;
+    font: normal 1rem 'permanent marker';
+    text-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
+    transition: all 0.2s ease-out;
+  }
+
 }
 
 div.project_infos {
