--- a/css/my_projects_section.css
+++ b/css/my_projects_section.css
@@ -556,7 +556,7 @@ button#ol_close_btn i {
 }
 @media screen and (max-width: 768px) {
   .detail-slider__item {
-    flex-direction: column;
+    flex-direction: row;
   }
 }
 .detail-slider__item.swiper-slide-active .detail-slider__img img {
@@ -625,6 +625,7 @@ button#ol_close_btn i {
 }
 @media screen and (max-width: 486px) {
   .detail-slider__img {
+    box-shadow: 4px 13px 10px 1px rgba(56, 82, 252, 0.1);
     height: 250px;
   }
 }
