--- a/css/my_projects_section.css
+++ b/css/my_projects_section.css
@@ -108,6 +108,12 @@ div.project_main_pic {
     width: 100%;
     max-width: 400px;
     height: auto;
+    min-height: 17rem;
+  }
+}
+@media screen and (max-width: 486px) {
+  div.project_main_pic {
+    min-height: 17rem;
   }
 }
 div.project_main_pic:hover p.click_me {
@@ -556,7 +562,7 @@ button#ol_close_btn i {
 }
 @media screen and (max-width: 768px) {
   .detail-slider__item {
-    flex-direction: row;
+    flex-direction: column;
   }
 }
 .detail-slider__item.swiper-slide-active .detail-slider__img img {
@@ -618,14 +624,12 @@ button#ol_close_btn i {
   flex-shrink: 0;
   height: 300px;
   background-image: linear-gradient(147deg, #f90 0%, #003cff 74%);
-  box-shadow: 4px 13px 20px 1px rgba(56, 82, 252, 0.2);
   border-radius: 20px;
   transform: translateX(0px);
   overflow: hidden;
 }
 @media screen and (max-width: 486px) {
   .detail-slider__img {
-    box-shadow: 4px 13px 10px 1px rgba(56, 82, 252, 0.1);
     height: 250px;
   }
 }
