--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -79,7 +79,12 @@ div.project_main_pic {
     width: 100%;
     max-width: 400px;
     height: auto;
+    min-height: 17rem;
   }
+  @media screen and (max-width: 486px) {
+    min-height: 17rem;
+  }
+  
   &:hover p.click_me {
     opacity: 0;
   }
@@ -532,7 +537,7 @@ button#ol_close_btn {
     align-items: center;
     
     @media screen and (max-width: 768px) {
-      flex-direction: row; // 이거 바꿈....
+      flex-direction: column; // 이거 colume이 기본
     }
     &.swiper-slide-active {
       .detail-slider__img {
@@ -543,36 +548,37 @@ button#ol_close_btn {
       }
       .detail-slider__content {
         > * {
-        opacity: 1;
-        transform: none;
-        font-family: "Noto sans KR";
-        @for $i from 0 to 15 {
-          &:nth-child(#{$i + 1}) {
-            transition-delay: $i * 0.1 + 0.3s;
+          opacity: 1;
+          transform: none;
+          font-family: "Noto sans KR";
+          @for $i from 0 to 15 {
+            &:nth-child(#{$i + 1}) {
+              transition-delay: $i * 0.1 + 0.3s;
+            }
           }
         }
       }
     }
   }
-}
 
-&__img {
-  width: 70%;
-  // width: 300px;
-  flex-shrink: 0;
-  height: 300px;
-  background-image: linear-gradient(147deg, #f90 0%, #003cff 74%);
-  box-shadow: 4px 13px 20px 1px rgba(56, 82, 252, 0.2);
-  border-radius: 20px;
-  transform: translateX(0px);
-  overflow: hidden;
-  @media screen and (max-width: 486px) {
-    box-shadow: 4px 13px 10px 1px rgba(56, 82, 252, 0.1);
-    height: 250px;
-  }
-  
-  &:after {
-    content: '';
+  &__img {
+    width: 70%;
+    // width: 300px;
+    flex-shrink: 0;
+    height: 300px;
+    background-image: linear-gradient(147deg, #f90 0%, #003cff 74%);
+    // box-shadow: 7px 13px 10px 1px rgba(56, 82, 252, 0.3);
+    border-radius: 20px;
+    transform: translateX(0px);
+    overflow: hidden;
+    
+    @media screen and (max-width: 486px) {
+      // box-shadow: 4px 10px 5px 3px rgba(56, 82, 252, 0.1);
+      height: 250px;
+    }
+    
+    &:after {
+      content: '';
       position: absolute;
       top: 0;
       left: 0;
@@ -582,7 +588,7 @@ button#ol_close_btn {
       border-radius: 20px;
       opacity: 0.8;
     }
-    
+      
     img {
       width: 100%;
       height: 100%;
@@ -612,7 +618,6 @@ button#ol_close_btn {
 
   &__content {
     padding-right: 25px;
-    // borderbox
     margin-top: 40px;
     @media screen and (max-width: 768px) {
       margin-top: -80px;
