--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -70,7 +70,7 @@ div.project_main_pic {
   width: 31rem;
   height: 19rem;
   border-radius: 20px;
-  background: white;
+  background: transparent;
   float: left;
   position: relative;
   left: 0;
@@ -99,6 +99,7 @@ div.project_main_pic {
     width: 100%;
     height: 100%;
     border-radius: 20px;
+    background: #ffffff;
     position: relative;
     left: 0;
     top: 0;
