--- a/css/my_projects_section.css
+++ b/css/my_projects_section.css
@@ -97,7 +97,7 @@ div.project_main_pic {
   width: 31rem;
   height: 19rem;
   border-radius: 20px;
-  background: transparent;
+  background: rgb(255, 176, 59);
   float: left;
   position: relative;
   left: 0;
