--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -107,10 +107,6 @@ div.project_main_pic {
     display: block;
     transition: all 0.4s ease-out;
   }
-  .mouseover {
-    
-
-  }
   .mouseover > img {
     border-radius: 20px;
     width: 100%;
@@ -154,10 +150,14 @@ div.project_infos {
     color: white;
     font: bold 1.875rem "Noto sans KR";
   }
+  .p_term {
+    color: white;
+    font: bold 1rem "Noto sans KR";
+  }
   .p_bodytext {
     color: white;
     font: bold 1rem "Noto sans KR";
-    margin-top: 1.3rem;
+    margin-top: 1rem;
     text-align: justify;
   }
   div.projects_skill {
@@ -254,7 +254,7 @@ div.projects_list_wrapper {
 }
 
 ul.project_list {
-  width: 27*6rem; // list의 개수만큼 곱함
+  width: 27*7rem; // list의 개수만큼 곱함
   height: 30rem;
   margin-top: 4.5rem;
   position: relative;
@@ -312,6 +312,10 @@ ul.project_list {
     }
     &:nth-child(6) {
       background: url('/images/project_list_06.webp') center center no-repeat;
+      background-size: contain;
+    }
+    &:nth-child(7) {
+      background: url('/images/project_list_07.webp') center center no-repeat;
       background-size: contain;
     }
   }
