--- a/scss/main_section.scss
+++ b/scss/main_section.scss
@@ -14,6 +14,18 @@ div#main_wrapper {
       line-height: 13.5625rem;
       letter-spacing: 1.0625rem;
       color: #003CFF;
+      &.rsg {
+        padding-top: 5rem;
+        opacity: 0;
+        position: relative;
+        left: -30rem;
+        top: 0;
+        transition: all 0.5s ease-in-out;
+      }
+      &.t_title {
+        opacity: 0;
+        transition: opacity 1s ease-in-out;
+      }
     }
   }
   div.bg_blues {
@@ -100,32 +112,33 @@ div.running_osung_wrapper {
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   .me {
-  background-image: url('/images/running.webp');
-  background-repeat: no-repeat;
-  display: block;
-  width: 300px;
-  height: 500px;
-  // animation-name: running;
-  animation-duration: 1s;
-  @media screen and (max-width: 768px) {
-    animation-duration: 0.6s;
+    background-image: url('/images/running.webp');
+    background-repeat: no-repeat;
+    display: block;
+    width: 300px;
+    height: 500px;
+    // animation-name: running;
+    animation-duration: 1s;
+    @media screen and (max-width: 768px) {
+      animation-duration: 0.6s;
+    }
+    animation-iteration-count: infinite;
+    animation-timing-function: steps(1);
+    background-position-y: 0;
+    zoom: 0.15;
+    @media screen and (max-width: 768px) {
+      zoom: 0.1;
+    }
+    // transition: all 0.5s ease-out;
+    // -moz-transform: scale(1.5);
+    // transform: scale(1.5);
+    // -moz-transform-origin: 151px 0;
+    // transform-origin: 151px 0;
   }
-  animation-iteration-count: infinite;
-  animation-timing-function: steps(1);
-  background-position-y: 0;
-  zoom: 0.15;
-  @media screen and (max-width: 768px) {
-    zoom: 0.1;
-  }
-  // transition: all 0.5s ease-out;
-  // -moz-transform: scale(1.5);
-  // transform: scale(1.5);
-  // -moz-transform-origin: 151px 0;
-  // transform-origin: 151px 0;
 }
 
-}
 
+// 애니메이션을 css에서 스크롤 이벤트로 옮김
 @keyframes moving {
   0% {
     left: -300px;
@@ -190,5 +203,28 @@ div.running_osung_wrapper {
   }
   100% {
     stroke-dashoffset: 0;
+  }
+}
+
+.running_start_wrapper {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  left: 10rem;
+  top: 11rem;
+  .start_osung {
+    display: none;
+    opacity: 0;
+    width: auto;
+    height: auto;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border: solid 2px palevioletred;
+    box-sizing: border-box;
+    img {
+      width: 170px;
+      height: auto;
+    }
   }
 }
