--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -66,6 +66,10 @@ div.project_view_wrapper {
   
 }
 
+.project_overview_wrapper {
+  transition: all 0.2s ease-out;
+}
+
 div.project_main_pic {
   width: 31rem;
   height: 19rem;
