--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -346,6 +346,7 @@ div.list_navigation {
     left: 250px;
     top: 0;
     z-index: 10;
+    padding: 10px;
     @media screen and (max-width: 1800px) {
       left: 30px;
     }
@@ -359,6 +360,7 @@ div.list_navigation {
     right: 250px;
     top: 0;
     z-index: 10;
+    padding: 10px;
     @media screen and (max-width: 1800px) {
       right: 30px;
     }
